k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: flask-app
spec:
  selector:
    app: flask-app

  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000

  type: ClusterIP
