k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: flask-app-policy
  namespace: flask-app

spec:
  podSelector:
    matchLabels:
      app: flask-app

  policyTypes:
    - Ingress

  ingress:
    - ports:
        - protocol: TCP
          port: 5000
